created the financial page

--- a/base/templates/dashboard.html
+++ b/base/templates/dashboard.html
@@ -808,7 +808,7 @@
             <h3>Quick Actions</h3>
         </div>
         <div class="action-buttons">
-            <a href="#" class="action-btn">
+            <a href="{% url 'add_beneficiary' %}" class="action-btn">
                 <i class="fas fa-user-plus"></i>
                 <span>Enroll New Student</span>
             </a>
