--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -523,7 +523,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{% url 'financial_dashboard' %}">
                             <i class="fas fa-money-check-alt"></i>
                             <span>Financial Aid</span>
                         </a>
