--- a/base/templates/login.html
+++ b/base/templates/login.html
@@ -101,9 +101,10 @@
         }
 
         .auth-logo {
-            width: 60px;
+            width: 80px;
             height: 60px;
             margin-bottom: 1.5rem;
+            object-fit: cover;
         }
 
         .auth-header {
