--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -528,8 +528,8 @@
                             <span>Financial Aid</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
+                    <li class="{% if 'performance' in request.path %}active{% endif %}">
+                        <a href="{% url 'performance_dashboard' %}">
                             <i class="fas fa-chart-bar"></i>
                             <span>Performance Analytics</span>
                         </a>
